# code_tympan3

./: .hgignore  CMakeLists.txt  ReadMe.rst  appveyor.yml  bitbucket-pipelines.yml
Tympan/: CMakeLists.txt  Config.h  Config.h.in  TYVersion.h.in  common_precompiled.h
Tympan/Appli/: CMakeLists.txt
Tympan/Appli/TympanApp/: CMakeLists.txt  EnvironmentUtils.cpp  OSplashScreen.cpp  OSplashScreen.h  TYAbstractSceneEditor.cpp  TYAbstractSceneEditor.h  TYAction.cpp  TYAction.h  TYActionManager.cpp  TYActionManager.h  TYActions.cpp  TYActions.h  TYAddLibraryDialog.cpp  TYAddLibraryDialog.h  TYAppDefines.h  TYApplication.cpp  TYApplication.h  TYBatimentModelerFrame.cpp  TYBatimentModelerFrame.h  TYBatimentToolbar.cpp  TYBatimentToolbar.h  TYBoundaryNoiseMapEditor.cpp  TYBoundaryNoiseMapEditor.h  TYBoxEditor.cpp  TYBoxEditor.h  TYCalculManager.cpp  TYCalculManager.h  TYCalculToolbar.cpp  TYCalculToolbar.h  TYCameraEditor.cpp  TYCameraEditor.h  TYCameraStepEditor.cpp  TYCameraStepEditor.h  TYCameraZoneEditor.cpp  TYCameraZoneEditor.h  TYCourbeNiveauEditor.cpp  TYCourbeNiveauEditor.h  TYCoursEauEditor.cpp  TYCoursEauEditor.h  TYCreateElementDialog.cpp  (+122 more)
Tympan/Appli/TympanConsole/: TYConsole.cpp  TYConsole.h  TympanConsole.cpp  (+1 more)
Tympan/GraphicIHM/: CMakeLists.txt
Tympan/MetierSolver/: CMakeLists.txt
Tympan/Tools/: CMakeLists.txt  OChrono.h  OColor.cpp  OColor.h  OGenID.h  OLocalizator.cpp  OLocalizator.h  OMessageManager.cpp  OMessageManager.h  OMsg.cpp  OMsg.h  OObserver.h  OPrototype.cpp  OPrototype.h  OSingleton.h  OSizeManager.cpp  OSizeManager.h  OSmartPtr.h  OSubject.cpp  OSubject.h  OXMLTreeManager.cpp  OXMLTreeManager.h  TYColorManager.cpp  TYColorManager.h  TYConfigure.h  TYProgressManager.cpp  TYProgressManager.h  geometrical_function.h
Tympan/core/: chrono.h  color.cpp  color.h  config.h.in  defines.h  exceptions.h  idgen.h  interfaces.h  logging.cpp  logging.h  macros.h  plugin.h  smartptr.h
Tympan/gui/: OSizeManager.h
Tympan/models/: CMakeLists.txt
python/: CMakeLists.txt
python/include/: Loader.hpp  totolib.hpp  tympan_wrap_pyconfig.h  tympan_wrap_python.h
python/src/: CMakeLists.txt  Loader.cpp  plot_mesh.py  pytam.pxd  pytam.pyx  solve_project.py  toto.pxd  toto.pyx  totolib.cpp  tympan.py
python/tests/: CMakeLists.txt  altimetry_testutils.py  test_acoustic_raytracer.py  test_altimetry.py  test_altimetry_builder.py  test_altimetry_envconfig.py  test_altimetry_functional.py  test_altimetry_mesh.py  test_altimetry_process.py  test_altimetry_roads.py  test_altimetry_sites.py  test_compare_tympan_project.py  test_create_objects.py  test_export_spectres_src.py  test_models.py  test_move_receptor_position.py  test_move_source_position.py  test_ope_rec_surf.py  test_plyfile.py  test_process_altimetry.py  test_pytam.py  test_solve.py  test_solve_boite_carto.py  test_solve_cube.py  test_solve_diffraction_butte_carto.py  test_solve_diffraction_construction_carto.py  test_solve_ecran.py  test_solve_ecran_cube.py  test_solve_effet_sol.py  test_solve_face.py  test_solve_impedance_sol.py  test_solve_machine_reflexion_batiment.py  test_solve_project.py  test_solve_rayonnement_batiment.py  test_solve_recepteurs_machine_cubique.py  test_solve_recepteurs_machine_cubique_bouche_aeration.py  test_solve_recepteurs_machine_cubique_ventilateur.py  test_solve_recepteurs_machine_cylindrique.py  test_solve_recepteurs_machine_dans_batiment_cubique.py  test_solve_recepteurs_machine_dans_batiment_cubique_avec_ecran.py  (+46 more)
python/tympan/: CMakeLists.txt  Loader.cpp  __init__.py  _business2solver.pxd  _business2solver.pyx  _core.pxd  _simulation.py  business2solver.pxd  business2solver.pyx  config_gui.py  core.pxd  pytam.pxd  pytam.pyx  simulation.py  solve_project.py
tests/: CMakeLists.txt  README.rst  TympanTestsConfig.h.in  TympanTestsConfig.hpp.in  _test_gui_palettewidget.cpp  test_3rdparty_nmpb2008.cpp  test_3rdparty_rply.cpp  test_acousticraytracer_accelerator.cpp  test_acousticraytracer_acoustic.cpp  test_acousticraytracer_engine.cpp  test_acousticraytracer_geometry.cpp  test_acousticraytracer_geometry_3d.cpp  test_acousticraytracer_geometry_mathlib.cpp  test_acousticraytracer_ray.cpp  test_acousticraytracer_tools.cpp  test_analyticraytracer.cpp  test_environment.cpp  test_example.cpp  test_examples.cpp  test_gui_bdtopoimporter.cpp  test_gui_palettewidget.h  test_m_b_altimetrie.cpp  test_m_b_altimetryfilereader.cpp  test_m_b_cgal.cpp  test_m_b_cgalbridge.cpp  test_m_b_oprototype.cpp  test_m_b_palette.cpp  test_m_b_road.cpp  test_m_b_sitenode.cpp  test_m_c_box2.cpp  test_m_c_mathlib.cpp  test_m_c_prettyprint.cpp  test_m_c_sonie.cpp  test_m_c_vector3d.cpp  test_m_s_entities.cpp  test_main.cpp  test_scene.cpp  test_selectors.cpp  test_simulation.cpp  test_testutils.cpp  (+13 more)
tests/DataExchange/: CMakeLists.txt  test_SolverDataModelBuilder.cpp
tests/SolverDataModel/: CMakeLists.txt  test_AltimetryBuilder.cpp  test_entities.cpp  test_site_functions.cpp
tests/business_logic/: CMakeLists.txt
tests/data/: Atmospheric_absorption.csv  ReadMe.rst  dataRoadEmissionNMPB2008.csv  empty_site.xml  empty_site_config_ko.xml  empty_site_receptor.xml  empty_site_source.xml  external_buildings.xml  external_machine1.xml  external_machine2.xml  legacy_3_colors_Palette.xml  legacy_default_Palette.xml  multi-sr.xml  site_receptor.xml  site_receptor_source.xml  test_external_elements.xml  test_restitution_results.xml  test_solver_params.xml  tiny_site.xml  trivial.ply  trivial_material.ply
tests/data_exchange/: CMakeLists.txt  app_test_QT_CGAL.cpp  test_SolverDataModelBuilder.cpp  test_site_functions.cpp  test_uuid_adapter.cpp
tests/gui/: CMakeLists.txt  test_PaletteWidget.cpp  test_PaletteWidget.h
tests/io/: CMakeLists.txt  test_bdtopo_import.cpp  test_ply_altimetry_reader.cpp
tests/solver_app_interface/: CMakeLists.txt  app_test_QT_CGAL.cpp  test_SolverDataModelBuilder.cpp  test_site_functions.cpp  test_uuid_adapter.cpp
tests/test_utils/: CMakeLists.txt  ComputationLauncher.cpp  ComputationLauncher.hpp  ProjectLoader.cpp  ProjectLoader.hpp  misc.cpp  misc.hpp  prettyprint.cpp  prettyprint.hpp
(+2145 files in other folders)
